--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: lishuo.cc@gmail.com
 description: "Every failure is leading towards success."
 keyword: "paul, paul Blog, 独自等待的博客, 等保,数据出境、合规、随笔"
-url: "http://qiubaiying.github.io"          # your host, for absolute URL
+url: "https://datianshi0605.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-#github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/datianshi0605/datianshi0605.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: false                           # whether or not using Sidebar.
